--- a/v2/css/main.css
+++ b/v2/css/main.css
@@ -163,6 +163,10 @@ header.carousel .fill {
 CTA
 ======================= */
 
+#cta_button {
+  margin: 2em 0;
+}
+
 .well {
   margin-bottom: 0;
   border-radius: none;
